skill-container with individual scroll animation, fixed shift

--- a/cv/css/css.css
+++ b/cv/css/css.css
@@ -102,6 +102,11 @@ main {
   padding-top: 0;
 }
 
+.skill-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .skill {
   display: inline-flex;
   margin: 25px 35px 0 0;
